--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="http://bootswatch.com/darkly/bootstrap.min.css">
 </head>
 <body>
-  <app-lista>Loading...</app-lista>
+  <div class="container">
+  	<div class="row">
+  		<div class="col-md-6 col-xs-12 col-sm-6">
+  			<app-lista>loading...</app-lista>
+  		</div>
+  	</div>
+  </div>
 </body>
 </html>
